tests/error/comptime/check_dereference12.bz
// error: invalid memory access of an object of type 'int32'
// note: in call to 'S::destructor(self: &S)'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
struct S
{
	.p: ?*int32;

	destructor(&self)
	{
		*self.p;
	}
}

function test()
{
	(consteval {
		mut t = [ S(), 0 ];
		t[0].p = &t[1];
	});
}
